@@ -1,10 +1,10 @@
 #!/bin/bash
 set -e
 
-source .travis/common-functions.sh
 source .travis/logger.sh
+source .travis/common-functions.sh
 
-VERSION=$(./mvnw -q -Dexec.executable="echo" -Dexec.args='${project.version}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.5.0:exec | tail -1)
+VERSION=$(./mvnw -q -Dexec.executable="echo" -Dexec.args='${project.version}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.5.0:exec)
 log_info "Building PMD Coveralls.io report ${VERSION} on branch ${TRAVIS_BRANCH}"
 
 if ! travis_isPush; then
@@ -12,17 +12,12 @@ if ! travis_isPush; then
     exit 0
 fi
 
-#
-# for java9: enable all modules.
-# coveralls plugin seems to need java.xml.bind module
-echo "MAVEN_OPTS='-Xms1g -Xmx1g --add-modules java.se.ee'" > ${HOME}/.mavenrc
-
 (
     # disable fast fail, exit immediately, in this subshell
     set +e
 
     ./mvnw clean install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-    ./mvnw test jacoco:report coveralls:report -Pcoveralls -B -V
+    ./mvnw package jacoco:report coveralls:report -Pcoveralls -B -V
 
     if [ $? -ne 0 ]; then
         log_error "Error creating coveralls report"
